main.css
html {
    background: #1c1f1f;
    -webkit-font-smoothing: antialiased;
}

body {
    background: #fff;
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.06);
    color: #545454;
    font-family: "Avenir Next", "Arial", sans-serif;
    font-size: 16px;
    line-height: 1.5;
    margin: 0 auto;
    max-width: 1000px;
    padding: 2em 2em 4em;
}

h1, h2, h3, h4, h5, h6 {
    color: #222;
    font-weight: 600;
    line-height: 1.3;
}

h2 {
    margin-top: 1.3em;
}

a {
    color: #0083e8;
}

a:link {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

b, strong {
    font-weight: 600;
}

samp {
    display: none;
}

img {
    background: transparent;
    border: 3px solid rgba(0, 0, 0, 0.15);
    border-radius: 10px;
    max-width: 25%;
    display: inline-block;
}

p {
    display: inline-block;
    vertical-align: middle;
}

.paper{
}

.paper > img{
    text-align:left;
    vertical-align:middle;
    margin-right:1em;
}

.paper > span{
    vertical-align:middle;
    display:inline-block
}

